objects/ssot__AuthorizationFormDataUse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AuthorizationFormId__c</fullName>
        <label>Authorization Form id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataUsePurposeId__c</fullName>
        <label>Data Use Purpose Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Authorization Form Data Use Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761154108_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationFormDataUse_Authorizati_rel</label>
        <referenceTo>ssot__AuthorizationForm__dlm</referenceTo>
        <relationshipLabel>AuthorizationFormDataUse_Authorizati_rel</relationshipLabel>
        <relationshipName>rel_1697761154108_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761154185_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationFormDataUse_DataUsePurp_rel</label>
        <referenceTo>ssot__DataUsePurpose__dlm</referenceTo>
        <relationshipLabel>AuthorizationFormDataUse_DataUsePurp_rel</relationshipLabel>
        <relationshipName>rel_1697761154185_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761154316_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationForm_Id_map_Authorizati_rel</label>
        <referenceTo>ssot__AuthorizationForm__dlm</referenceTo>
        <relationshipLabel>AuthorizationForm_Id_map_Authorizati_rel</relationshipLabel>
        <relationshipName>rel_1697761154316_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>